--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -9,14 +9,14 @@ html, body {
   min-height: 100vh; }
 
 body {
-  background-image: url("/images/bg-pattern-top-desktop.svg"), url("/images/bg-pattern-bottom-desktop.svg");
+  background-image: url("../../images/bg-pattern-top-desktop.svg"), url("../../images/bg-pattern-bottom-desktop.svg");
   background-position: top left 2.5vw, bottom -12vh right;
   background-repeat: no-repeat;
   background-size: auto, 85%; }
 
 @media (max-width: 540px) {
   body {
-    background-image: url("/images/bg-pattern-top-mobile.svg"), url("/images/bg-pattern-bottom-mobile.svg");
+    background-image: url("../../images/bg-pattern-top-mobile.svg"), url("../../images/bg-pattern-bottom-mobile.svg");
     background-position: top left, bottom -15vh left;
     background-repeat: no-repeat;
     background-size: 100%, 100%; } }
