--- a/styles/sass/components/_socialBuyer.scss
+++ b/styles/sass/components/_socialBuyer.scss
@@ -50,7 +50,7 @@
      line-height: 1.7;
 }
 
-@media (max-width: 1240px) {
+@media (max-width: 77.5rem) {
      .social-buyers {
           grid-template-columns: 1fr;
           grid-template-rows: repeat(3, auto);
