--- a/styles/sass/components/_socialSection.scss
+++ b/styles/sass/components/_socialSection.scss
@@ -18,7 +18,6 @@
 }
 
 .social-heading h1 {
-     font-size: 3rem;
      max-width: 90%;
      padding-bottom: 0.75rem;
 }
@@ -29,7 +28,7 @@
 }
 
 
-@media (max-width: 1240px) {
+@media (max-width: 77.5rem) {
      .social-section {
           padding: 5rem 2rem;
      }
