--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -9,14 +9,14 @@ html, body {
   min-height: 100vh; }
 
 body {
-  background-image: url("../../images/bg-pattern-top-desktop.svg"), url("../../images/bg-pattern-bottom-desktop.svg");
+  background-image: url("/images/bg-pattern-top-desktop.svg"), url("/images/bg-pattern-bottom-desktop.svg");
   background-position: top left 2.5vw, bottom -12vh right;
   background-repeat: no-repeat;
   background-size: auto, 85%; }
 
-@media (max-width: 540px) {
+@media (max-width: 33.75rem) {
   body {
-    background-image: url("../../images/bg-pattern-top-mobile.svg"), url("../../images/bg-pattern-bottom-mobile.svg");
+    background-image: url("/images/bg-pattern-top-mobile.svg"), url("/images/bg-pattern-bottom-mobile.svg");
     background-position: top left, bottom -15vh left;
     background-repeat: no-repeat;
     background-size: 100%, 100%; } }
@@ -44,6 +44,13 @@ strong {
   color: #f7f2f7;
   font-weight: 500; }
 
+.social-heading h1 {
+  font-size: 3rem; }
+
+@media (max-width: 33.75rem) {
+  .social-heading h1 {
+    font-size: 2.5rem; } }
+
 .social-section {
   display: grid;
   padding: 2rem;
@@ -60,7 +67,6 @@ strong {
   padding-bottom: 3rem; }
 
 .social-heading h1 {
-  font-size: 3rem;
   max-width: 90%;
   padding-bottom: 0.75rem; }
 
@@ -68,7 +74,7 @@ strong {
   line-height: 1.7;
   max-width: 90%; }
 
-@media (max-width: 1240px) {
+@media (max-width: 77.5rem) {
   .social-section {
     padding: 5rem 2rem; }
   .social-resume {
@@ -124,7 +130,7 @@ strong {
 .social-comment {
   line-height: 1.7; }
 
-@media (max-width: 1240px) {
+@media (max-width: 77.5rem) {
   .social-buyers {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, auto);
@@ -166,12 +172,13 @@ strong {
 .rating-3 {
   justify-self: end; }
 
-@media (max-width: 1240px) {
+@media (max-width: 77.5rem) {
   .social-review {
     grid-template-rows: auto auto;
     grid-template-columns: 1fr;
     justify-items: center;
-    row-gap: 1rem; }
+    row-gap: 1rem;
+    text-align: center; }
   .rating-1, .rating-2, .rating-3 {
     justify-self: center;
     width: 100%; } }
